--- a/themes/landscape/layout/_partial/head.ejs
+++ b/themes/landscape/layout/_partial/head.ejs
@@ -33,4 +33,6 @@
   <%- partial("baidu_tongji") %>
   <!--<%- partial("tencent_tongji") %>-->
   <%- partial('google-analytics') %>
+  <!-- add by yurixu 2016/1/13 向百度提交sitemap-->
+  <meta name="baidu-site-verification" content="ubBCJmBrxD" />
 </head>
