--- a/themes/landscape/layout/_partial/article.ejs
+++ b/themes/landscape/layout/_partial/article.ejs
@@ -74,3 +74,13 @@
       <!-- 多说公共JS代码 end -->
   </section>
   <% } %>
+
+  <!-- 向百度自动推送-->
+  <script>
+  (function(){
+      var bp = document.createElement('script');
+      bp.src = '//push.zhanzhang.baidu.com/push.js';
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(bp, s);
+  })();
+  </script>
