--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -52,7 +52,7 @@
   color: color-default
   padding: 0 article-padding
   p, table
-    line-height: line-height
+    line-height: 2.0em
     margin: line-height 0
   h1, h2, h3, h4, h5, h6
     font-weight: bold
@@ -65,8 +65,9 @@
     &:hover
       text-decoration: underline
   ul, ol, dl
-    margin-top: line-height
-    margin-bottom: line-height
+    margin-top: 2.0em
+    margin-bottom: 2.0em
+    line-height: 1.8em
   img, video
     max-width: 100%
     height: auto
@@ -78,6 +79,7 @@
     width: 100%
     border-collapse: collapse
     border-spacing: 0
+    line-height: 2.0em
   th
     font-weight: bold
     border-bottom: 3px solid color-border
