--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -41,6 +41,7 @@
   font-size: 2em
   font-weight: bold
   color: color-default
+  margin-top: 10px
   line-height: line-height-title
   transition: color 0.2s
   a&:hover
