--- a/themes/landscape/layout/_partial/head.ejs
+++ b/themes/landscape/layout/_partial/head.ejs
@@ -28,7 +28,8 @@
   <% if (theme.favicon){ %>
     <link rel="icon" href="<%- theme.favicon %>">
   <% } %>
-  <link href="//fonts.useso.com/css?family=Lato:400,400italic" rel="stylesheet" type="text/css">
+  <!--link href="//fonts.useso.com/css?family=Lato:400,400italic" rel="stylesheet" type="text/css"-->
+  <link href="http://yurixu.com/css/fonts/Google/font.css" rel="stylesheet" type="text/css">
   <%- css('css/style') %>  
   <%- partial("baidu_tongji") %>
   <!--<%- partial("tencent_tongji") %>-->
